kubernetes/scraping-api-agent.yaml
apiVersion: v1
kind: Pod
metadata:
  name: scraping-api-agent
  namespace: scraping-api
  labels:
    name: scraping-api-agent
    app: scraping-api-agent
spec:
  dnsConfig:
    nameservers:
      - 1.1.1.1
      - 1.0.0.1
  containers:
    - name: scraping-api-agent
      image: mucks/scraping-api-agent:latest
      resources:
        limits:
          memory: "512Mi"
          cpu: "250m"
      securityContext:
        capabilities:
          add:
            - NET_ADMIN
