kubernetes/undetected_chromedriver.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: undetected_chromedriver
  namespace: scraping-api
spec:
  replicas: 5
  selector:
    matchLabels:
      app: undected-chromedriver
  template:
    metadata:
      labels:
        app: undetected-chromedriver
  template:
    spec:
      containers:
      - image: openvpn-client-rs
        name: openvpn-client
      - image: undetected-chromedriver
        name: undetected-chromedriver
