kubernetes/scraping-api-agent-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: scraping-api-agent
  namespace: scraping-api
spec:
  selector:
    app: scraping-api-agent
  type: ClusterIP
  ports:
    - protocol: TCP
      name: http
      port: 80
      targetPort: 4000
